--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -347,33 +347,33 @@ et al., 2015; Parada et al., 2016). These primers contained on their
 \(5'\) end a tagged sequence. Each sample was amplified in four parallel
 25 \si{\ul} reactions of which each contained 1 × Q5 Reaction Buffer,
 0.2 \si{\milli\Molar} dNTPmix, 0.7 \si{\mg\per\ml} BSA (Bovine Serum
-Albumin), 0.2 \si{\micro\Molar} of forward and reverse primers, 0.5 U of
-Q5 High-Fidelity DNA Polymerase (New England Biolabs, USA) and 5
-\si{\ng} of DNA template. Cycling conditions were: initial denaturation
-at 94 \si{\degreeCelsius} for 3 \si{\minute}, 20 cycles of denaturation
-at 94 \si{\degreeCelsius} for 45 \si{\s}, annealing at 50
-\si{\degreeCelsius} for 60 \si{\s} and elongation at 72
-\si{\degreeCelsius} for 90 \si{\s}, finalized by an elongation step at
-72 \si{\degreeCelsius} for 10 \si{\minute}. The four parallel reactions
-volumes were pooled and PCR products were purified using the GeneJET PCR
-Purification Kit (Thermo Fisher Scientific, USA) according to the
-manufacturer's instructions and following the protocol that included
-isopropanol addition for better small DNA fragment yield. The column was
-eluted in 30 \si{\ul} of deionized water. Purified PCR products were
-sent for Illumina MiSeq sequencing (2 × 250 bp) at IMGM Laboratories,
-Martinsried, Germany. Before sequencing at IMGM, the second PCR
-amplification of the two-step PCR procedure was performed using primers
-targeting the tagged region incorporated in the first PCR. In addition,
-these primers contained adapter and sample-specific index sequences. The
-second PCR was carried out for 8 cycles. Beside samples, a positive and
-negative control were sequenced. A negative control was comprised of
-four parallel PCR reactions without DNA template, while for a positive
-control a mock community composed of evenly mixed DNA material
-originating from 20 bacterial strains (ATCC MSA-1002, ATCC, USA) was
-used. Partial 16S rRNA sequences obtained in this study have been
-deposited in the European Nucleotide Archive (ENA) at EMBL-EBI under
-accession numbers SAMEA6786270, SAMEA6648792 -- SAMEA6648794,
-SAMEA6648809 -- SAMEA6648811 and SAMEA6648824.
+Albumin), 0.2 \si{\micro\Molar} forward and reverse primers, 0.5 U of Q5
+High-Fidelity DNA Polymerase (New England Biolabs, USA) and 5 \si{\ng}
+of DNA template. Cycling conditions were: initial denaturation at 94
+\si{\degreeCelsius} for 3 \si{\minute}, 20 cycles of denaturation at 94
+\si{\degreeCelsius} for 45 \si{\s}, annealing at 50 \si{\degreeCelsius}
+for 60 \si{\s} and elongation at 72 \si{\degreeCelsius} for 90 \si{\s},
+finalized by an elongation step at 72 \si{\degreeCelsius} for 10
+\si{\minute}. The four parallel reactions volumes were pooled and PCR
+products were purified using the GeneJET PCR Purification Kit (Thermo
+Fisher Scientific, USA) according to the manufacturer's instructions and
+following the protocol that included isopropanol addition for better
+small DNA fragment yield. The column was eluted in 30 \si{\ul} of
+deionized water. Purified PCR products were sent for Illumina MiSeq
+sequencing (2 × 250 bp) at IMGM Laboratories, Martinsried, Germany.
+Before sequencing at IMGM, the second PCR amplification of the two-step
+PCR procedure was performed using primers targeting the tagged region
+incorporated in the first PCR. In addition, these primers contained
+adapter and sample-specific index sequences. The second PCR was carried
+out for 8 cycles. Beside samples, a positive and negative control were
+sequenced. A negative control was comprised of four parallel PCR
+reactions without DNA template, while for a positive control a mock
+community composed of evenly mixed DNA material originating from 20
+bacterial strains (ATCC MSA-1002, ATCC, USA) was used. Partial 16S rRNA
+sequences obtained in this study have been deposited in the European
+Nucleotide Archive (ENA) at EMBL-EBI under accession numbers
+SAMEA6786270, SAMEA6648792 -- SAMEA6648794, SAMEA6648809 -- SAMEA6648811
+and SAMEA6648824.
 
 Obtained sequences were analysed on the computer cluster Isabella
 (University Computing Center, University of Zagreb) using mothur
