--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -683,7 +683,7 @@ al., 2013). It is possible that chloroplast-specific sequences even in
 these studies originated from eukaryotic epiphytic cells and not from
 host chloroplasts. Indeed, it is common during 16S rRNA profiling of
 pelagic microbial communities to observe high proportions of chloroplast
-sequences (Gilbert et al., 2009; Korlević et al., 2016). On of the
+sequences (Gilbert et al., 2009; Korlević et al., 2016). One of the
 solutions to further reduce chloroplast 16S rRNA sequence contamination
 is to use primers that minimise the amplification of these reads if the
 sequencing and study design allow it (Hanshew et al., 2013). In
