--- a/submission/manuscript.tex
+++ b/submission/manuscript.tex
@@ -140,8 +140,8 @@ Herndl\textsuperscript{2,3,4}, Mirjana Najdek\textsuperscript{1}
 2. Department of Functional and Evolutionary Ecology, University of
 Vienna, Austria
 
-3. NIOZ, Department of Marine Microbiology and Biogeochemistry, Royal
-Netherlands Institute for Sea Research, Utrecht University, The
+3. Department of Marine Microbiology and Biogeochemistry, Royal
+Netherlands Institute for Sea Research (NIOZ), Utrecht University, The
 Netherlands
 
 4. Vienna Metabolomics Center, University of Vienna, Austria
@@ -159,7 +159,7 @@ Fax: +385 52 804 780
 e-mail:
 \href{mailto:marino.korlevic@irb.hr}{\nolinkurl{marino.korlevic@irb.hr}}
 
-Running title: DNA and protein isolation from macrophyte surfaces
+Running title: Selective isolation from macrophyte surfaces
 
 \newpage
 \linenumbers
