--- a/submission/supplementary.tex
+++ b/submission/supplementary.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1.0in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={Supplementary Information},
+            pdftitle={Supplementary Material},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -73,7 +73,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{\textbf{Supplementary Information}}
+  \title{\textbf{Supplementary Material}}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
   \subtitle{\textbf{Selective DNA and Protein Isolation from Marine Macrophyte
@@ -151,8 +151,8 @@ Herndl\textsuperscript{2,3,4}, Mirjana Najdek\textsuperscript{1}
 2. Department of Functional and Evolutionary Ecology, University of
 Vienna, Austria
 
-3. NIOZ, Department of Marine Microbiology and Biogeochemistry, Royal
-Netherlands Institute for Sea Research, Utrecht University, The
+3. Department of Marine Microbiology and Biogeochemistry, Royal
+Netherlands Institute for Sea Research (NIOZ), Utrecht University, The
 Netherlands
 
 4. Vienna Metabolomics Center, University of Vienna, Austria
@@ -170,7 +170,7 @@ Fax: +385 52 804 780
 e-mail:
 \href{mailto:marino.korlevic@irb.hr}{\nolinkurl{marino.korlevic@irb.hr}}
 
-Running title: DNA and protein isolation from macrophyte surfaces
+Running title: Selective isolation from macrophyte surfaces
 
 \sisetup{mode=text}
 \setlength\parindent{24pt}
